<resources>
    <string name="app_name">Playlist maker</string>
    <string name="header" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="app_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="clear">Очистить</string>
    <string name="practicum_url" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="agreement_url" translatable="false">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="support_email" translatable="false">"smolyakov.kirusha@gmail.com"</string>
    <string name="support_email_body" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_subject" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_subject" translatable="false">"Link to YP lessons"</string>
    <string name="share_intent_title" translatable="false">"Share Link"</string>
    <string name="email_intent_title" translatable="false">Email to developer</string>
    <string name="connection_trouble">Проблемы с соединением</string>
    <string name="connection_trouble_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_is_empty">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="history_header">Вы искали</string>
    <string name="connection_trouble">Communication problems</string>
    <string name="connection_trouble_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_is_empty">Ничего не нашлось</string>
    <string name="update">Обновить</string>
</resources>