<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settingsBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <ImageButton
            android:id="@+id/back_btn"
            style="@style/ImageButtonStyle"
            android:layout_gravity="center"
            android:src="@drawable/back_button"></ImageButton>

        <TextView
            style="@style/MessageTextStyle"
            android:layout_margin="20dp"
            android:drawablePadding="40dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textFontWeight="500"
            android:textSize="22sp"></TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="0">

        <TextView
            style="@style/MessageTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dark_theme"></TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switchTheme_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"></Switch>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            style="@style/MessageTextStyle"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/share_app"></TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/share_btn"
            style="@style/ImageButtonStyle"
            android:gravity="right"
            android:src="@drawable/share"></ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="0">

        <TextView
            style="@style/MessageTextStyle"
            android:layout_margin="10dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/app_support"></TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/support_btn"
            style="@style/ImageButtonStyle"
            android:gravity="right"
            android:src="@drawable/support"></ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="0">

        <TextView
            style="@style/MessageTextStyle"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/user_agreement"></TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/term_of_use_btn"
            style="@style/ImageButtonStyle"
            android:src="@drawable/forward"></ImageButton>
    </LinearLayout>

</LinearLayout>