<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_btn"
            style="@style/ImageButtonStyle"
            android:layout_gravity="center"
            android:src="@drawable/back_button" />

        <TextView
            style="@style/MessageTextStyle"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:drawablePadding="40dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textFontWeight="500"
            android:textSize="@dimen/buttonTextSize" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="0"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_gravity="start|center"
            android:background="@android:color/transparent"
            android:drawablePadding="10sp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true"
            app:drawableLeftCompat="@drawable/search" />

        <ImageButton
            android:id="@+id/clear_btn"
            style="@style/DeleteImageButtonStyle"
            android:layout_gravity="end|center"
            android:layout_margin="10dp"
            android:src="@drawable/clear_btn"
            android:visibility="invisible" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/emptySearchFrameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                style="@style/SearchIsEmptyImage"
                android:layout_gravity="center" />

            <TextView
                style="@style/SearchIsEmptyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/search_is_empty"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/troubleWithConnectionFrameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                style="@style/TroubleWithConnectionImage"
                android:layout_gravity="center" />

            <TextView
                style="@style/TroubleWithConnectionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/connection_trouble"
                android:textSize="19sp" />

            <TextView
                style="@style/TroubleWithConnectionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:maxWidth="280dp"
                android:text="@string/connection_trouble_description"
                android:textSize="19sp" />

            <Button
                android:id="@+id/refresh_btn"
                style="@style/TroubleWithConnectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/update"
                android:textSize="14sp"
                app:cornerRadius="54dp" />
        </LinearLayout>

    </FrameLayout>


</LinearLayout>
